fix: layout issues in Angular 16
Three fixes:
1. input-amount component horizontal alignment, e.g. in "Approved Amount" in Approve Loans
2. Alignment of fields in "Loan Purpose" line in the General tab of a Loan Product
3. Make comboboxes full width (50% or 100%) in the Accounting Step of Loan Products

FIXES: WEB-182

--- a/src/app/shared/input-amount/input-amount.component.scss
+++ b/src/app/shared/input-amount/input-amount.component.scss
@@ -2,6 +2,17 @@
   margin-top: -7px;
 }
 
+.input-container {
+  width: 100%;
+}
+
+.input-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+}
+
 .container {
   max-width: 37rem;
 }
